--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,18 +9,19 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": false, // 👈 muda pra false (permite import normal de tipos)
+    "verbatimModuleSyntax": false, // 👈 Corrige import type / ToasterProps
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
 
-    /* Linting */
-    "strict": false,                // 👈 relaxa o modo estrito
+    /* ⚙️ Relaxar o TypeScript (mantendo boa base) */
+    "strict": false,                // 👈 desativa modo estrito
     "noImplicitAny": false,         // 👈 permite parâmetros sem tipo
-    "skipLibCheck": true,           // 👈 ignora erros em dependências
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true,           // 👈 ignora erros em libs
+    "noPropertyAccessFromIndexSignature": false,
+    "useUnknownInCatchVariables": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
 
     /* Base paths */
     "baseUrl": ".",
